--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "httpx>=0.28.1",
     "mcp[cli]>=1.2.1",
+    "pydantic>=2.10.6",
 ]
 
 [project.scripts]
