--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "httpx>=0.28.1",
     "mcp[cli]>=1.2.1",
     "pydantic>=2.10.6",
+    "youtube-transcript-api>=0.6.2",
 ]
 
 [project.scripts]
